--- a/employees/style1.css
+++ b/employees/style1.css
@@ -5,12 +5,14 @@
   
   .main {
     width: 100%;
-    background: linear-gradient(
+    background-color: #d7d9dc;
+
+    /* background: linear-gradient(
         to top,
         rgba(0, 0, 0, 0.5) 50%,
         rgba(0, 0, 0, 0.5) 50%
       ),
-      url(1.jpg);
+      url(1.jpg); */
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -26,7 +28,8 @@
     width: 1200px;
     height: auto;
     margin: auto;
-    color: #fff;
+    /* color: #fff; */
+    color: #000;
     position: relative;
   }
   
@@ -61,12 +64,14 @@
   
   .content .cn a {
     text-decoration: none;
-    color: #000;
+    /* color: #000; */
+    color: #fff;
     transition: 0.3s ease;
   }
   
   .cn:hover {
-    background-color: #fff;
+    background-color: #003e67;
+    
   }
   
   .content span {
