--- a/employees/main/style.css
+++ b/employees/main/style.css
@@ -3,19 +3,29 @@
     padding: 0;
   }
   
-
+  
   .topnav {
     position: relative;
     overflow: hidden;
     background-color: #333;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+z-index: 1;
+  }
+  .topnav .topnav-left p{
+  color: red;
+  font-weight: bold;
+  font-size: 14px;
   }
   
-  .topnav h1,h2,h3,img {
+  .topnav h1,h2,h3,p,img {
     /* float: left; */
     color: #f2f2f2;
     text-align: center;
     /* padding: 14px 16px; */
-    padding: 4px 6px;
+    padding: 0px 2px;
     text-decoration: none;
     font-size: 17px;
   }
@@ -39,7 +49,7 @@
   
   /* Responsive navigation menu (for mobile devices) */
   @media screen and (max-width: 600px) {
-    .topnav h1,h2,h3, .topnav-right {
+    .topnav h1,h2,h3,p, .topnav-right {
       float: none;
       display: block;
     }
@@ -51,28 +61,28 @@
       transform: none;
     }
   }
-
-
+  
+  
   /* =================================== */
-/* 
-.part1{
+  /* 
+  .part1{
   width: 100%;
   height: 300px;
   position: relative;
-
-}
-
-button.icon1{
+  
+  }
+  
+  button.icon1{
     width: 180px;
     height: 80px;
     border-radius: 50px;
- 
+  
     position: absolute;
     right: 650px;
     bottom: 0;
    
-}
-img.img1{
+  }
+  img.img1{
     width: 400px;
     height: 310px;
     border-radius: 30px;
@@ -81,32 +91,32 @@ img.img1{
     bottom: 0;
     top: 0;
     margin-right: 5px;
-}
-hr.hr1,
-hr.hr2{
+  }
+  hr.hr1,
+  hr.hr2{
     height: 10px;
     color: white;
-}
-
-
-.part2{
+  }
+  
+  
+  .part2{
     width: 100%;
     height: 300px;
     position: relative;
- 
+  
     
-}
-h1.hh1{
+  }
+  h1.hh1{
     float: right;
-}
-button.icon2{
+  }
+  button.icon2{
     width: 180px;
     height: 80px;
     border-radius: 50px;
-
+  
     float: right;
-}
-img.img2{
+  }
+  img.img2{
     width: 400px;
     height: 310px;
     border-radius: 30px;
@@ -115,19 +125,19 @@ img.img2{
     bottom: 0;
     top: 0;
     margin-right: 5px;
-}
+  }
   
-.part3{
+  .part3{
     width: 100%;
     height: 300px;
     position: relative;
-
-}
-
-h1.emp{
+  
+  }
+  
+  h1.emp{
     float: right;
-}
-input.in1 {
+  }
+  input.in1 {
     background-image: url(Images/icomEmp.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -137,7 +147,7 @@ input.in1 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
- 
+  
     position: absolute;
     right: 600px;
     top: 0;
@@ -145,7 +155,7 @@ input.in1 {
     margin-top: 8px;
     
   }
-
+  
   input.in2 {
     background-image: url(Images/report.png);
     background-repeat: no-repeat;
@@ -164,75 +174,76 @@ input.in1 {
     margin-top: 8px;
     
   } */
-
+  
   /* ==================================== */
   
-.about{
+  .about{
   width: 100%;
   padding: 100px 0px;
   background-color: #444547;
-}
-
-.about .in1{
+  }
+  
+  .about .in1{
   /* background-image: url(add.png);
-background-repeat: no-repeat;
-background-size: 100% 100%; */
-cursor: pointer;
-height: 430px;
-width: 430px;
-}
-.About-text{
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
+  cursor: pointer;
+  height: 430px;
+  width: 430px;
+  }
+  .About-text{
   width: 550px;
-}
-.main{
+  }
+  .main{
   width: 1130px;
   max-width: 95%;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
-
-}
-
-.About-text h2{
+  
+  }
+  
+  .About-text h2{
   color: white;
   font-size: 75px;
   text-transform: capitalize;
   margin-bottom: 20px;
   margin-right: 100px;
-}
-.About-text h5{
+  }
+  .About-text h5{
   color: white;
   letter-spacing: 2px;
   font-size: 22px;
   margin-bottom: 25px;
   text-transform: capitalize;
-}
-
-.About-text h5 span{
+  }
+  
+  .About-text h5 span{
   color: #f25b5b;
-}
-.About-text p{
+  }
+  .About-text p{
   color: white;
   letter-spacing: 1px;
   line-height: 28px;
   font-size: 18px;
   margin-bottom: 45px;
-} 
-
-
-
-.about .in2{
+  } 
+  
+  
+  
+  .about .in2{
   /* background-image: url(pngwing.com\ \(15\).png);
-background-repeat: no-repeat;
-background-size: 100% 100%; */
-cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
+  cursor: pointer;
   height: 430px;
   width: 430px;
-}
-
-
-
-
-
-
+  }
+  
+  
+  
+  
+  
+  
+  
