--- a/employees/rep_style.css
+++ b/employees/rep_style.css
@@ -3,20 +3,28 @@
     padding: 0;
     box-sizing: border-box;
   }
- 
+
 
   .topnav {
     position: relative;
     overflow: hidden;
     background-color: #333;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
-  
-  .topnav h1,h2,h3,img {
+  .topnav .topnav-left p a{
+    color: blue;
+        font-weight: bold;
+      font-size: 14px;
+      }
+  .topnav h1,h2,h3,p,img {
     /* float: left; */
     color: #f2f2f2;
     text-align: center;
     /* padding: 14px 16px; */
-    padding: 8px 10px;
+    padding: 4px 6px;
     text-decoration: none;
     font-size: 17px;
   }
@@ -40,7 +48,7 @@
   
   /* Responsive navigation menu (for mobile devices) */
   @media screen and (max-width: 600px) {
-    .topnav h1,h2,h3, .topnav-right {
+    .topnav h1,h2,h3,p, .topnav-right {
       float: none;
       display: block;
     }
@@ -52,9 +60,16 @@
       transform: none;
     }
   }
-  /* =================================== */
-  
-  input[type=text],input[type=date],select {
+/* ============================= */
+.searchs {
+    width: 100%;
+    height: 150px;
+    background-color: rgb(163, 163, 163);
+}
+
+/* ======================== */
+
+input[type=text],input[type=date],select {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -69,7 +84,7 @@
   }
   
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #005b84;
     color: white;
     width: 150px;
     height: 40px;
@@ -80,7 +95,7 @@
     float: right;
   }
   button {
-    background-color: #04AA6D;
+    background-color: #005b84;
     color: white;
     width: 150px;
     height: 40px;
@@ -93,14 +108,13 @@
   }
   a{
     color: white;
-    text-decoration: none;
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #003e67;
   }
   button:hover{
-    background-color: #45a049;
+    background-color: #003e67;
   }
   
   .container {
@@ -135,3 +149,50 @@
       margin-top: 0;
     }
   }
+
+  hr{
+    margin-top: 10px;
+    background-color: black;
+    
+    height: 2px;
+
+  }
+
+  
+  table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    text-align: right;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+th {
+    background-color: #477326;
+    color: white;
+    text-align: center;
+}
+
+input[type=submit] {
+    background-color: #005b84;
+    color: white;
+    width: 150px;
+    height: 40px;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    margin: 5px;
+}
+
+input[type=submit]:hover {
+    background-color: #003e67;
+}
