--- a/employees/style.css
+++ b/employees/style.css
@@ -1,59 +1,80 @@
+body{
+    background-color: rgb(222, 220, 220);
+}
 * {
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
   }
- 
-
-  .topnav {
-    position: relative;
-    overflow: hidden;
-    background-color: #333;
-  }
+/* ============================================= */
   
-  .topnav h1,h2,h3,img {
-    /* float: left; */
-    color: #f2f2f2;
-    text-align: center;
-    /* padding: 14px 16px; */
-    padding: 8px 10px;
-    text-decoration: none;
-    font-size: 17px;
+.topnav {
+  position: relative;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.topnav .topnav-left p a{
+  color: blue;
+      font-weight: bold;
+    font-size: 14px;
+    }
+.topnav h1,h2,h3,p,img {
+  /* float: left; */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 5px 7px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* .topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+} */
+
+.topnav-centered img {
+  width: 100px;
+  height: 100px;
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+  float: right;
+}
+.topnav-left {
+  float: left;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav h1,h2,h3,p, .topnav-right {
+    float: none;
+    display: block;
   }
   
   .topnav-centered img {
-    width: 100px;
-    height: 100px;
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
   }
-  
-  .topnav-right {
-    float: right;
-  }
-  .topnav-left {
-    float: left;
-  }
-  
-  /* Responsive navigation menu (for mobile devices) */
-  @media screen and (max-width: 600px) {
-    .topnav h1,h2,h3, .topnav-right {
-      float: none;
-      display: block;
-    }
-    
-    .topnav-centered img {
-      position: relative;
-      top: 0;
-      left: 0;
-      transform: none;
-    }
-  }
-  /* =================================== */
-  
+}
+
+  /* =========================================== */
+
   input[type=text],input[type=date],select {
     width: 100%;
     padding: 12px;
@@ -69,7 +90,7 @@
   }
   
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #005b84;
     color: white;
     width: 150px;
     height: 40px;
@@ -80,7 +101,7 @@
     float: right;
   }
   button {
-    background-color: #04AA6D;
+    background-color: #005b84;
     color: white;
     width: 150px;
     height: 40px;
@@ -93,14 +114,13 @@
   }
   a{
     color: white;
-    text-decoration: none;
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #003e67;
   }
   button:hover{
-    background-color: #45a049;
+    background-color: #003e67;
   }
   
   .container {
